fix: [contact] contact mobile layout overflow fix

--- a/components/Copyright.module.scss
+++ b/components/Copyright.module.scss
@@ -3,9 +3,18 @@
   align-items: center;
   justify-content: space-between;
   margin-top: 1rem;
+  @media only screen and (max-height: 750px) {
+    margin-top: 0.5rem;
+  }
+  @media only screen and (max-height: 700px) {
+    display: none;
+  }
   &__text {
     font-size: 0.7rem;
     color: #d6d6d6;
+    @media only screen and (max-height: 750px) {
+      font-size: 0.6rem;
+    }
   }
   &__icon_box {
     margin-right: 2rem;
@@ -18,6 +27,7 @@
     justify-content: center;
     align-items: center;
   }
+
   @media only screen and (min-width: 915px) {
     display: none;
   }
