--- a/pages/contact/contact.module.scss
+++ b/pages/contact/contact.module.scss
@@ -29,6 +29,7 @@
     transform: translate(-50%, -50%);
     display: flex;
     align-items: center;
+
     @media only screen and (max-width: 915px) {
       flex-direction: column-reverse;
       width: 90%;
@@ -47,6 +48,9 @@
       padding-bottom: 1rem;
       @media only screen and (max-width: 915px) {
         padding-top: 1.5rem;
+      }
+      @media only screen and (max-height: 750px) {
+        font-size: 0.75rem;
       }
       &__header {
         font-family: mr-l;
@@ -115,13 +119,20 @@
           font-size: 1.3rem;
           margin-bottom: 2rem;
           color: #333333;
+          @media only screen and (max-height: 750px) {
+            margin-bottom: 1.2rem;
+          }
         }
         & > input {
           padding-bottom: 0.5rem;
           margin-bottom: 1.5rem;
+          @media only screen and (max-height: 750px) {
+            margin-bottom: 0.85rem;
+          }
         }
         & > textarea {
-          height: 7rem;
+          min-height: 7rem;
+          max-height: 12rem;
           resize: vertical;
         }
         & > input,
@@ -147,7 +158,6 @@
           margin-top: 1rem;
           background-color: #333333;
           color: #fff;
-          // padding: 0.3rem 0.7rem;
           border: none;
           border-radius: 0.2rem;
           width: 3.5rem;
